# logget

./: .env.example  .gitignore  NOTES.md  README.md  package-lock.json  package.json  pyproject.toml  setup.js  test_server.py  tsconfig.json
server/: alembic.ini  config.py  database.py  dependencies.py  main.py  models.py
server/alembic/: env.py
server/alembic/versions/: 20260604_893377fc43a7_init_schema.py  20260608_6c01fa2eb533_phase3_intensity_ewma_status.py  20260609_2b930a0f60bf_phase3_intensity_ewma_status.py
server/models/: log.py  user.py
server/routers/: auth.py  dashboard.py  insights.py  items.py  logs.py
server/schemas/: dashboard.py  insight.py  log.py  user.py
server/services/: ai.py  auth.py  lbs.py  log.py  storage.py
server/services/prompts/: daily_summary.txt  pattern_insight.txt
server/utils/: uuid.py
web/: components.json  eslint.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: PageNotFound.jsx  ProtectedRoute.jsx
web/src/components/logget/: AiCheckin.jsx  BottomNav.jsx  (+7 more)
web/src/context/: AuthContext.jsx  AuthProvider.tsx
web/src/hooks/: use-mobile.ts  useAuth.ts
web/src/lib/: PageNotFound.jsx  utils.ts
web/src/pages/: Dashboard.tsx  Home.tsx  Log.tsx  Login.tsx  Test.tsx
web/src/screens/: AuthCallback.tsx  ForgotPassword.jsx  HealthTab.jsx  Home.jsx  HomeTab.jsx  LogTab.jsx  Login.jsx  Register.jsx  ResetPassword.jsx
web/src/services/: auth.service.ts  axiosClient.ts  dashboard.service.ts  insights.service.ts  logs.service.ts  types.ts
(+8 files in other folders)
