[project]
requires-python = ">=3.13"
name = "app"
version = "0.1.0"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.7.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "ruff>=0.15.15",
    "sqlalchemy>=2.0.50",
]
