[project]
requires-python = ">=3.13"
name = "app"
version = "0.1.0"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cloudinary>=1.44.2",
    "fastapi[standard]>=0.136.3",
    "google-auth-oauthlib>=1.4.0",
    "google-genai>=2.7.0",
    "pwdlib[bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
